# ai-web3-shenzhen

./: DESIGN.md  PROJECT_SUBMISSION.md  PULL_REQUEST_TEMPLATE.md  README.md  SUBMISSION_COMPLETE.md  SUBMISSION_INSTRUCTIONS.md  log.md
 hashkey-chain\Multi-Chain Asset Rebalancing & Arbitrage Solution/: MockToken.sol.txt  Multi-Chain Asset Management System - 设计文档.md  RebalanceRouter.sol.txt
 pepepfp:Multi-Chain Asset Rebalancing & Arbitrage Solution/: MockAssetFactory.sol.txt  README.MD  SimpleNFT.sol.txt  TinyDEX.sol.txt  index.html
AI-audit/: readme.md
EventPredictionPlatformOnChain-toB/: README.md
TheWeb3_AGENT/: .gitignore  AGENTS.md  AUTODL_SETUP.md  DESIGN.docx  DESIGN.md  HIGHLIGHTS.md  LICENSE  PRD.md  README.md  (+3 more)
ceres-protocol/services/ai-agent/: .env.demo  .env.example  IMPLEMENTATION_SUMMARY.md  README.md  demo_script.py  pyproject.toml  visual_demo.py
ceres-protocol/services/ai-agent/ai_agent/: __init__.py  __main__.py  health.py
ceres-protocol/services/ai-agent/ai_agent/core/: __init__.py  blockchain.py  config.py  intelligent_agent.py
ceres-protocol/services/ai-agent/ai_agent/demo/: __init__.py  simulation_engine.py
ceres-protocol/services/ai-agent/ai_agent/modes/: __init__.py  competitive_judgment.py  external_hotspot.py  trend_analysis.py
ceres-protocol/services/ai-agent/ai_agent/orderbook/: __init__.py  market_creator.py
ceres-protocol/services/ai-agent/ai_agent/utils/: __init__.py  monitoring.py  strategy.py
ceres-protocol/services/ai-agent/tests/: __init__.py  test_ai_intelligent_agent.py  test_config.py  test_trend_analysis.py
(+1139 files in other folders)
